trunk/Archive2/d2/76969039a25387/output
main.cpp:14:17: error: no matching function for call to 'getItem'
    auto item = getItem(list.cbegin());
                ^~~~~~~
main.cpp:24:5: note: in instantiation of function template specialization 'foo<int>' requested here
    foo<int>();
    ^
main.cpp:6:3: note: candidate template ignored: couldn't infer template argument 'T'
T getItem(typename std::forward_list<T>::const_iterator it) {
  ^
1 error generated.
